--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 ---
-title: Home
+title: Página inicial
 ---
 
-<h2>Welcome</h2>
+<h2>Bem-vindo</h2>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<!--<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />-->
 
-<p>Welcome to my blog!</p>
+<p>Sejam Bem-vindos as minhas páginas!</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<p>A baixo está uma listas das últimas postagens que publiquei. Poderás encontrar
+uma serie de projetos que desenvolvo na <a href="/projects.html">página de projetos</a>. Para saber mais 
+sobre mim, <a href="/about.html">clique aqui</a>.</p>
 
-<h2>Posts</h2>
+<h2>Artigos recentes</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>…Ou podes ver a lista completa de <a href="/archive.html">artigos</a>.</p>
