Adicionado alguns metas no html.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content>
-    <meta name="author" content>
+    <meta name="description" content="Haskell, processamento digital de sinais, desenvolvimento de software, etc. Um blog que pretende apresentar algumas
+	           páginas de Lemol-C.">
+    <meta name="author" content="Leza Morais Lutonda, Lemol, Lemol-C">
+    <meta name="reywords" content="Leza Morais Lutonda, Lemol, Lemol-C, Haskell, C#, Telecomunicações, Desenvolvimento de software, nodejs">
     <link rel="icon" href="./assets/ico/favicon.ico">
 
     <title>Home - Páginas de Lemol-C</title>
