--- a/archive.html
+++ b/archive.html
@@ -45,7 +45,7 @@
     <a href="./posts/2014-11-03-Hello-world.html">
         <span>November  3, 2014</span>
         <h3>Hello world!</h3>
-        <div>Esse é o blog.</div>
+        <div>main = print "Olá! Eu sou o Lemol-C."</div>
     </a>
     </li>
 
