--- a/about.html
+++ b/about.html
@@ -32,7 +32,15 @@
 
 	</header>
 
-	<p><strong>Leza Morais Lutonda</strong>, alias <strong><em>Lemol</em></strong> (a.k.a <strong><em>Lemol-C</em></strong>) é angolano, candidato ao título de engenheiro em telecomunicações e eletrónica pela <a href="http://www.cujae.edu.cu">CUJAE</a>. Também se considera aficionado em desenvolvimento e arquitetura de software. Ainda sonha em estudar temas avançados de matemática pura.</p>
+	<div class="top-strip"></div>
+<div class="content">
+<main class="container">
+    <div class="row-fluid">
+            <section class="content">
+            <h1>Páginas de Lemol-C</h1>
+            </section>
+            <section class="content">
+            <p><strong>Leza Morais Lutonda</strong>, alias <strong><em>Lemol</em></strong> (a.k.a <strong><em>Lemol-C</em></strong>) é angolano, candidato ao título de engenheiro em telecomunicações e eletrónica pela <a href="http://www.cujae.edu.cu">CUJAE</a>. Também se considera aficionado em desenvolvimento e arquitetura de software. Ainda sonha em estudar temas avançados de matemática pura.</p>
 <p>Começou a envolver-se com programação já faz um tempo (ou talvez dois tempos) havendo passado por VB6 (o que passou, passou) e posteriormente se encantou com programação orientada a objetos (e seus princípios, práticas e padrões) com C#.</p>
 <p>Teve a oportunidade de aprender a desenvolver para web, e com isso ganhou interesse em tecnologias abertas.</p>
 <p>Conheceu programação funcional, e com <a href="http://www.haskell.org/haskellwiki/Haskell">Haskell</a> descobriu que não existe outro estilo melhor para desenvolver software.</p>
@@ -40,6 +48,13 @@
 <p>Apreciador de software livre e de código aberto, conseqüentemente mantem vários projetos que podem ser encontrados em <a href="https://github.com/lemol">sua página de Github</a>.</p>
 <p>Por fim, em essas páginas poderás encontrar postagens de vários temas. Fora quando se faça menção, todos os artigos serão publicados baixo a licencia Creative Commons. O site é gerado por Hakyll e hospedado por Github pages. O código para a geração do site também é livre baixo a licencia <a href="http://lemolsoft.mit-license.org">MIT</a>.</p>
 <p>03-11-2014 (num dia especial)</p>
+            </section>
+    </div>
+    <hr>
+</main>
+</div>
+
+
 
 	<footer>
         <div class="container">
