--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,22 @@
 
 	</header>
 
-	<p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+	<div class="top-strip"></div>
+<div class="content">
+<main class="container">
+    <div class="row-fluid">
+            <section class="content">
+            <h1>Páginas de Lemol-C</h1>
+            </section>
+            <section class="content">
+            <p>I live in a small hut in the mountains of Kumano Kodō on Kii Hantō and would not like to be contacted.</p>
+            </section>
+    </div>
+    <hr>
+</main>
+</div>
+
+
 
 	<footer>
         <div class="container">
