--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             
                 <li>
                 <a href="./posts/2014-11-03-Hello-world.html">
-                    <span>November  3, 2014</span>
+                    <span> 3 de novembro de 2014</span>
                     <h3>Hello world!</h3>
                     <div>main = print "Olá! Eu sou o Lemol-C."</div>
                 </a>
