--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="author" href="./humans.txt">
 		<meta name="description" content="Description Goes Here">
 		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="./css/font-mfizz.css">
                 
 		<!--[if IE 7]>
 			<html class="ie7"> 
@@ -69,6 +70,9 @@
                     a.menu-about:hover, a.menu-about:active {
                         color: #924ee4;
                     }
+                    a.menu-haskell:hover, a.menu-haskell:active {
+                        color: #11aaff;
+                    }
                     .content h2 {
                         font-size: 3em;
                         padding: 1.5em 0px 0.2em;
@@ -108,6 +112,10 @@
                     ·
                     <a title="twitter" href="http://twitter.com/lemolsoft" class="menu-twitter">
                         <i class="icon-twitter"></i> 
+                    </a>
+                    ·
+                    <a title="I'm a Haskeller" href="http://www.haskellers.com/user/3414" class="menu-haskell">
+                            <i class="icon-haskell"></i> 
                     </a>
                     ·
                     <a href="mailto:lemol-c@hotmail.com" class="menu-contact">
