Adicionado tags no index.html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                     <p>Pode seguir-me no <a href="http://twitter.com/lemolsoft">twitter</a> 
                     ou no <a href="http://github.com/lemol">github</a>, ou contactar-me 
                     por <a href="mailto:lemol-c@hotmail.com">e-mail</a>.</p>
+                    <p>Neste blog, entre outras coisas escrevo sobre <a href="#">telecomunicações</a>,
+                    <a href="#">processamento digital de sinais</a>, <a href="#">desenvolvimento de software</a>, <a href="#">programação funcional</a>,
+                    <a href="#">etc</a>.</p>
                     <p>Para saber mais sobre mim <a href="./about.html">clique aqui</a>.</p>
                 </blockquote>
             </section>
