Muita coisa, acho que eh nos about

--- a/archive.html
+++ b/archive.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-                <title>Archives - Páginas de Lemol-C</title>
+                <title>Archives >>= Páginas de Lemol-C</title>
 		<!-- For responsive site
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		-->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<link rel="author" href="./humans.txt">
-		<meta name="description" content="Description Goes Here">
+                <meta name="description" content="Bem vindo às páginas de Leza Morais Lutonda (Lemol-C). Aqui se trata sobre telecomunicações, processamento digital de sinais, desenvolvimento de software, programação funcional, matemática, etc.">
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="./css/font-mfizz.css">
                 
@@ -118,7 +118,7 @@
                             <i class="icon-haskell"></i> 
                     </a>
                     ·
-                    <a href="mailto:lemol-c@hotmail.com" class="menu-contact">
+                    <a href="./contact.html" class="menu-contact">
                         <i class="icon-envelope"></i> 
                     </a>
                     ·
@@ -142,7 +142,7 @@
     <a href="./posts/2014-11-03-Hello-world.html">
         <span> 3 de novembro de 2014</span>
         <h3>Hello world!</h3>
-        <div>main = print "Olá! Eu sou o Lemol-C."</div>
+        <div>Introdução do principio do começo :)</div>
     </a>
     </li>
 
