AN: Como esse blog e gerado

--- a/archive.html
+++ b/archive.html
@@ -139,6 +139,14 @@
             <ul class="entries">
 
     <li>
+    <a href="./posts/2015-05-01-como-esse-blog-e-gerado.html">
+        <span> 1 de maio de 2015</span>
+        <h3>Como esse blog é gerado?</h3>
+        <div>Resposta curta: é gerado de uma forma bem divertida. Resposta longa: leia o artigo :)</div>
+    </a>
+    </li>
+
+    <li>
     <a href="./posts/2014-11-03-Hello-world.html">
         <span> 3 de novembro de 2014</span>
         <h3>Hello world!</h3>
