Update em abstract

--- a/archive.html
+++ b/archive.html
@@ -142,7 +142,7 @@
     <a href="./posts/2015-05-01-como-esse-blog-e-gerado.html">
         <span> 1 de maio de 2015</span>
         <h3>Como esse blog é gerado?</h3>
-        <div>Resposta curta: é gerado de uma forma bem divertida. Resposta longa: leia o artigo :)</div>
+        <div>Resposta curta: é gerado de uma forma bem divertida. Resposta media: com Hakyll, uma biblioteca em Haskell para compilar páginas webs estáticas. Resposta longa: leia o artigo :)</div>
     </a>
     </li>
 
