Preparando para introduzir a linguagem haskell

--- a/about.html
+++ b/about.html
@@ -93,7 +93,17 @@
                         padding-bottom: 0.6em;
                         letter-spacing: 0.04em;
                     }
-                    
+
+                    .content .post h3 {
+                        margin-top: 2em;
+                        margin-bottom: 1em;
+                    }
+
+                    .content .post blockquote {
+                        font-style: italic;
+                        color: #939393;
+                    }
+
                 </style>
 	</head>
 	<body>
